[update] supported a statement that has a sub-statement

--- a/configure.json
+++ b/configure.json
@@ -2,8 +2,8 @@
     "source_filename": "test/test.c",
     "pool":
     [
-        "test/test.c"
-        , "test/test_pool.c"
+        "test/test.c",
+        "test/test_pool.c"
     ],
     "result_filename": "test/test_repair.c",
 
